// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/tag/demo/basic.md correctly 1`] = `
<div>
  <div
    class="ant-tag"
    data-show="true"
  >
    Tag 1
  </div>
  <div
    class="ant-tag"
    data-show="true"
  >
    <a
      href="https://github.com/ant-design/ant-design/issues/1862"
    >
      Link
    </a>
  </div>
  <div
    class="ant-tag"
    data-show="true"
  >
    Tag 2
    <i
      class="anticon anticon-cross"
    />
  </div>
  <div
    class="ant-tag"
    data-show="true"
  >
    Prevent Default
    <i
      class="anticon anticon-cross"
    />
  </div>
</div>
`;

exports[`renders ./components/tag/demo/checkable.md correctly 1`] = `
<div>
  <div
    class="ant-tag ant-tag-checkable ant-tag-checkable-checked"
  >
    Tag1
  </div>
  <div
    class="ant-tag ant-tag-checkable ant-tag-checkable-checked"
  >
    Tag2
  </div>
  <div
    class="ant-tag ant-tag-checkable ant-tag-checkable-checked"
  >
    Tag3
  </div>
</div>
`;

exports[`renders ./components/tag/demo/colorful.md correctly 1`] = `
<div>
  <h4
    style="margin-bottom:16px"
  >
    Presets:
  </h4>
  <div>
    <div
      class="ant-tag ant-tag-magenta"
      data-show="true"
    >
      magenta
    </div>
    <div
      class="ant-tag ant-tag-red"
      data-show="true"
    >
      red
    </div>
    <div
      class="ant-tag ant-tag-volcano"
      data-show="true"
    >
      volcano
    </div>
    <div
      class="ant-tag ant-tag-orange"
      data-show="true"
    >
      orange
    </div>
    <div
      class="ant-tag ant-tag-gold"
      data-show="true"
    >
      gold
    </div>
    <div
      class="ant-tag ant-tag-lime"
      data-show="true"
    >
      lime
    </div>
    <div
      class="ant-tag ant-tag-green"
      data-show="true"
    >
      green
    </div>
    <div
      class="ant-tag ant-tag-cyan"
      data-show="true"
    >
      cyan
    </div>
    <div
      class="ant-tag ant-tag-blue"
      data-show="true"
    >
      blue
    </div>
    <div
      class="ant-tag ant-tag-geekblue"
      data-show="true"
    >
      geekblue
    </div>
    <div
      class="ant-tag ant-tag-purple"
      data-show="true"
    >
      purple
    </div>
  </div>
  <h4
    style="margin:16px 0"
  >
    Custom:
  </h4>
  <div>
    <div
      class="ant-tag ant-tag-has-color"
      data-show="true"
      style="background-color:#f50"
    >
      #f50
    </div>
    <div
      class="ant-tag ant-tag-has-color"
      data-show="true"
      style="background-color:#2db7f5"
    >
      #2db7f5
    </div>
    <div
      class="ant-tag ant-tag-has-color"
      data-show="true"
      style="background-color:#87d068"
    >
      #87d068
    </div>
    <div
      class="ant-tag ant-tag-has-color"
      data-show="true"
      style="background-color:#108ee9"
    >
      #108ee9
    </div>
  </div>
</div>
`;

exports[`renders ./components/tag/demo/control.md correctly 1`] = `
<div>
  <div
    class="ant-tag"
    data-show="true"
  >
    Unremovable
  </div>
  <div
    class="ant-tag"
    data-show="true"
  >
    Tag 2
    <i
      class="anticon anticon-cross"
    />
  </div>
  <div
    class="ant-tag"
    data-show="true"
  >
    Tag 3
    <i
      class="anticon anticon-cross"
    />
  </div>
  <div
    class="ant-tag"
    data-show="true"
    style="background:#fff;border-style:dashed"
  >
    <i
      class="anticon anticon-plus"
    />
     New Tag
  </div>
</div>
`;

exports[`renders ./components/tag/demo/hot-tags.md correctly 1`] = `
<div>
  <h6
    style="margin-right:8px;display:inline"
  >
    Categories:
  </h6>
  <div
    class="ant-tag ant-tag-checkable"
  >
    Movies
  </div>
  <div
    class="ant-tag ant-tag-checkable"
  >
    Books
  </div>
  <div
    class="ant-tag ant-tag-checkable"
  >
    Music
  </div>
  <div
    class="ant-tag ant-tag-checkable"
  >
    Sports
  </div>
</div>
`;
